--- a/src/components/subcomponent/ChipPanel.module.css
+++ b/src/components/subcomponent/ChipPanel.module.css
@@ -17,7 +17,7 @@
   /* border-radius: 15px; */
   overflow: hidden;
 }
-.dozen_select{
+.dozen_select {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   /* border: 1px solid red; */
@@ -32,29 +32,26 @@
   cursor: pointer;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  border:2px solid grey;
+  border: 2px solid grey;
 }
-.diff_select{
-    display: grid;
+.diff_select {
+  display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-column: 2/14;
   grid-template-rows: 6;
 }
-.street_select{
+.street_select {
   display: grid;
   grid-row: 1/4;
   grid-column: 14;
-  grid-template-rows: repeat(3,1fr);
-
+  grid-template-rows: repeat(3, 1fr);
 }
 .zerochip {
   grid-row-start: 1;
   grid-row-end: 4;
   display: flex;
-  border:2px solid grey;
   justify-content: center;
   align-items: center;
-  border: 1px solid rgb(56, 52, 52);
   color: white;
   font-weight: 600;
   background-color: rgb(13, 168, 13);
@@ -65,7 +62,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid rgb(68, 68, 68);
   color: white;
   font-weight: 600;
   background-color: rgb(179, 15, 15);
@@ -77,7 +73,6 @@
   font-size: 1vw;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
   color: white;
   font-weight: 600;
   background-color: rgb(63, 63, 92);
@@ -87,16 +82,16 @@
 .gridchip {
   width: 2vw;
 }
-.chipscontainer{
+.chipscontainer {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.chipvalues{
-    position: absolute;
-    color:white;
-    font-weight: 700;
-    font-size: .6vw;
-    text-align: center;
-    /* top:30px; */
+.chipvalues {
+  position: absolute;
+  color: white;
+  font-weight: 700;
+  font-size: 0.6vw;
+  text-align: center;
+  /* top:30px; */
 }
