--- a/src/components/subcomponent/HistoryModal.module.css
+++ b/src/components/subcomponent/HistoryModal.module.css
@@ -51,4 +51,33 @@
   background-color: rgb(41, 41, 41);
   width: 100%;
   height: 100%;
+  overflow: scroll;
+  overflow-x: hidden;
+  scrollbar-color: #ff912a;
+
+  &::-webkit-scrollbar {
+    width: 2px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #ff912a;
+    height: 5px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent; /* You can set a color for the track if needed */
+  }
+  div {
+    color: white;
+  }
+}
+.textcontainer {
+  color: white;
+  margin: 15px;
+  font-size: 1rem;
+  display: flex;
+  justify-content: space-between;
+  padding: 8px 16px;
+  border-radius: 20px;
+  background-color: rgb(80, 79, 79);
 }
