--- a/src/components/subcomponent/HistoryModal.module.css
+++ b/src/components/subcomponent/HistoryModal.module.css
@@ -50,7 +50,8 @@
 .textArea {
   background-color: rgb(41, 41, 41);
   width: 100%;
-  height: 100%;
+  height: 82%;
+  margin-bottom: 2rem;
   overflow: scroll;
   overflow-x: hidden;
   scrollbar-color: #ff912a;
