--- a/src/components/subcomponent/Modal.module.css
+++ b/src/components/subcomponent/Modal.module.css
@@ -58,7 +58,7 @@
   display: grid;
   place-items: left;
   padding: 5px;
-  font-size: 1rem;
+  font-size: 1.3rem;
   background-color: #000000;
   font-weight: 500;
   color: rgb(255, 255, 255);
@@ -78,7 +78,7 @@
 }
 .textArea {
   width: 70%;
-  height: auto;
+  height: 100%;
   color: white;
   background-color: rgb(41, 41, 41);
 }
