--- a/src/components/subcomponent/Progressbar.module.css
+++ b/src/components/subcomponent/Progressbar.module.css
@@ -3,17 +3,28 @@
   height: 2.4vh;
   border-radius: 12px;
   background-color: grey;
+  position: relative;
   overflow: hidden;
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
 
+  /* position: absolute;
+    top: 60%;
+    left: 50%; */
+  /* transform: translate(-50%, -50%); */
+  transition: all 0.7s ease; /* Define the transition */
+}
+/* .slidedown {
+  transform: translateY(45%);
+} */
+.msg {
+  z-index: 200;
+  width: 100%;
+  position: absolute;
+  top: 0%;
+  text-align: center;
+}
 .timer_bar {
   height: 100%;
   width: 100%;
-  
   background-color: #4caf50; /* Green color */
   transform-origin: left;
   transition: transform 1s linear;
@@ -22,7 +33,7 @@
   position: absolute;
   top: 0%;
   width: 100%;
-  color:white;
+  color: white;
   font-weight: 500;
   text-align: center;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
