--- a/src/components/Game.module.css
+++ b/src/components/Game.module.css
@@ -125,3 +125,11 @@
     height: 20px;
   }
 }
+@media screen and (max-width: 450px) {
+  .navbar {
+    display: none;
+  }
+  .maintextbox {
+    display: none;
+  }
+}
