--- a/src/components/subcomponent/Progressbar.module.css
+++ b/src/components/subcomponent/Progressbar.module.css
@@ -1,22 +1,27 @@
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  transition: all 0.7s ease;
+}
+
 .timer_container {
   width: 35%;
   height: 2.4vh;
   border-radius: 12px;
   background-color: grey;
-  position: relative;
+  position: absolute;
+  top: 60%;
   overflow: hidden;
-
-  /* position: absolute;
-    top: 60%;
-    left: 50%; */
-  /* transform: translate(-50%, -50%); */
-  transition: all 0.7s ease; /* Define the transition */
+  display: flex;
+  justify-content: center;
+  transition: all 0.7s linear; /* Define the transition */
 }
-/* .slidedown {
-  transform: translateY(45%);
-} */
+.slidedown {
+  transform: translateY(calc(60% + 80px));
+}
 .msg {
-  z-index: 200;
+  z-index: 4;
   width: 100%;
   position: absolute;
   top: 0%;
@@ -59,5 +64,16 @@
   }
   100% {
     opacity: 1;
+  }
+}
+@media screen and (max-width: 450px) {
+  .timer_container {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    border-radius: 0;
+  }
+  .slidedown {
+    transform: none;
   }
 }
