--- a/src/components/subcomponent/Progressbar.module.css
+++ b/src/components/subcomponent/Progressbar.module.css
@@ -11,14 +11,14 @@
   border-radius: 12px;
   background-color: grey;
   position: absolute;
-  top: 60%;
+  top: 58%;
   overflow: hidden;
   display: flex;
   justify-content: center;
   transition: all 0.7s linear; /* Define the transition */
 }
 .slidedown {
-  transform: translateY(calc(60% + 80px));
+  transform: translateY(calc(60% + 75px));
 }
 .msg {
   z-index: 4;
@@ -42,7 +42,7 @@
   font-weight: 500;
   text-align: center;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 2vh;
+  font-size: 1.2rem;
 }
 .bartextblink {
   animation: blink 1s linear infinite;
@@ -53,7 +53,7 @@
   width: 100%;
   text-align: center;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 2vh;
+  font-size: 1.2rem;
 }
 @keyframes blink {
   0% {
@@ -75,5 +75,11 @@
   }
   .slidedown {
     transform: none;
+  }
+  .bartext {
+    font-size: 1rem;
+  }
+  .bartextblink {
+    font-size: 1rem;
   }
 }
