added another feature of rebet

--- a/src/components/subcomponent/ChipPanel.module.css
+++ b/src/components/subcomponent/ChipPanel.module.css
@@ -82,12 +82,12 @@
   color: white;
   font-weight: 600;
   background-color: rgb(179, 15, 15);
-  font-size: 2rem;
+  font-size: 1.5rem;
   cursor: pointer;
 }
 .chips2 {
   display: flex;
-  font-size: 2rem;
+  font-size: 1.5rem;
   justify-content: center;
   align-items: center;
   color: white;
@@ -108,10 +108,22 @@
   position: absolute;
   color: white;
   font-weight: 700;
-  font-size: 1rem;
+  font-size: 0.8rem;
+  z-index: 2;
   height: 20px;
   text-align: center;
   /* top:30px; */
+}
+.rebet {
+  display: grid;
+  place-items: center;
+  color: white;
+  cursor: pointer;
+  /* border: 1px solid red; */
+  text-align: center;
+}
+.rebet img {
+  scale: 0.8;
 }
 
 @media screen and (max-width: 1200px) {
@@ -204,5 +216,8 @@
   .slidedown {
     scale: 1.3;
     transform: translateY(30%);
+  }
+  .rebet img {
+    width: 20px;
   }
 }
