--- a/src/components/subcomponent/ChipPanel.module.css
+++ b/src/components/subcomponent/ChipPanel.module.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  transition: all 0.7s linear; /* Define the transition */
+  transition: transform 0.7s linear; /* Define the transition */
 }
 .footer_Mobile {
   display: none;
@@ -125,7 +125,9 @@
 .rebet img {
   scale: 0.8;
 }
-
+.fadeimg {
+  filter: brightness(0.5) saturate(0%);
+}
 @media screen and (max-width: 1200px) {
   .mainpanelgrid {
   }
