--- a/src/components/subcomponent/ChipPanel.module.css
+++ b/src/components/subcomponent/ChipPanel.module.css
@@ -121,9 +121,10 @@
   cursor: pointer;
   /* border: 1px solid red; */
   text-align: center;
+  /* width: 2rem; */
 }
 .rebet img {
-  scale: 0.8;
+  width: 2rem;
 }
 .fadeimg {
   filter: brightness(0.5) saturate(0%);
@@ -217,7 +218,7 @@
   }
   .slidedown {
     scale: 1.3;
-    transform: translateY(30%);
+    /* transform: translateY(30%); */
   }
   .rebet img {
     width: 20px;
