--- a/src/components/subcomponent/Progressbar.module.css
+++ b/src/components/subcomponent/Progressbar.module.css
@@ -7,7 +7,7 @@
 
 .timer_container {
   width: 35%;
-  height: 2.4vh;
+  height: 1.5rem;
   border-radius: 12px;
   background-color: grey;
   position: absolute;
@@ -24,8 +24,11 @@
   z-index: 4;
   width: 100%;
   position: absolute;
-  top: 0%;
+  /* top: 0%; */
   text-align: center;
+  /* top: 50%; */
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .timer_bar {
   height: 100%;
