--- a/src/components/subcomponent/Progressbar.module.css
+++ b/src/components/subcomponent/Progressbar.module.css
@@ -1,7 +1,6 @@
 .container {
   display: flex;
   justify-content: center;
-  align-items: end;
   transition: all 0.7s ease;
 }
 
@@ -13,22 +12,10 @@
   position: absolute;
   top: 58%;
   overflow: hidden;
-  display: flex;
-  justify-content: center;
   transition: transform 0.7s linear; /* Define the transition */
 }
 .slidedown {
   transform: translateY(calc(60% + 75px));
-}
-.msg {
-  z-index: 4;
-  width: 100%;
-  position: absolute;
-  /* top: 0%; */
-  text-align: center;
-  /* top: 50%; */
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 .timer_bar {
   height: 100%;
@@ -37,23 +24,16 @@
   transform-origin: left;
   transition: transform 1s linear;
 }
-.bartext {
+.msg {
   position: absolute;
-  top: 0%;
   width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0%;
   color: white;
   font-weight: 500;
-  text-align: center;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 1.2rem;
-}
-.bartextblink {
-  animation: blink 1s linear infinite;
-  color: white;
-  font-weight: 500;
-  position: absolute;
-  top: 0%;
-  width: 100%;
   text-align: center;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 1.2rem;
@@ -81,6 +61,9 @@
   }
   .bartext {
     font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .bartextblink {
     font-size: 1rem;
